# TicTacToe

./: CMakeLists.txt  test.cpp
src/: data.json  dataInput.cpp  main.cpp  main1.cpp  tempCode
src/include/: MiniMax.h  archive.h  dataInput.h  drawScreen.h  loadGame.h  mapping.h  touchLogic.h  winLogic.h
src/include/drawScreen/: inBangXepHang.h  inCaiDat.h
src/include/rapidjson/: allocators.h  document.h  pointer.h  reader.h  schema.h  uri.h  writer.h
src/include/rapidjson/error/: error.h
src/include/rapidjson/internal/: biginteger.h  diyfp.h  regex.h  strfunc.h
src/lib/: MiniMax.cpp  archive.cpp  dataInput.cpp  drawScreen.cpp  loadGame.cpp  mapping.cpp  touchLogic.cpp  winLogic.cpp
src/lib/drawScreen/: inBangXepHang.cpp  inCaiDat.cpp
